# newfm

./: .env.example  .gitignore  Cargo.toml  README.md  devenv.nix  justfile  package.json  turbo.json
.github/workflows/: submit.yml
.sqlx/: query-10df9013515179bad2258e1455c1df5112ec80d8e60ae29637d29ae2dd749aff.json  query-25b0a9e066398c90325c3fe314ed1a4651b17e1b2fed74f325ba1ef35b94704f.json  query-2781a6a50e352b69553e025d992b95169723b3b96e00af389e5fe90678712958.json  query-4872c7abcd2b78fc7051f9d227684a245cfefbb5e97d8457f6cefaa400c820b3.json  query-665a044c62f24df2fd5d6424d7ad5d0e6c7dadcd2b6fd13ef2cfc5f078d7389c.json  query-6c281736302f9019a3ec3d04580a25f7049ea097f85243f64a13ac8006aef262.json  query-b7fb5bacf2c96076b2498825bd0322e2a756843311b71177e520590ba9f004bc.json  query-be061c411c0409b4b504f2ca05e77957f76d7559ce6c1368525d52e71da4d725.json  query-c86771d8ad89a222d530da51ec10473b5a4463e060d9bdb4f6a415dc7ac30c06.json  query-d94efa3ef5839c0ce8aea8409905e0c9b27485c304800abd6b98e69f60c43c67.json  query-f5d1fc8b0f3f4013ed3ae824d5b2a38c92525fc1921ebc23fa8144b9464c3617.json
apps/extension/: package.json  tsconfig.json
apps/extension/src/: background.ts  popup.css  popup.tsx
apps/extension/src/contents/: youtube-music.ts
crates/api/: Cargo.toml  package.json
crates/api/src/: errors.rs  main.rs  router.rs  state.rs
crates/db/: Cargo.toml
crates/db/src/: pool.rs
crates/db/src/queries/: auth.rs  mod.rs  scrobbles.rs  tracks.rs  users.rs
crates/shared/src/: models.rs  scrobble.rs  user.rs
crates/worker/: Cargo.toml  package.json
crates/worker/src/: main.rs
(+7 files in other folders)
