[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
